# JniDemo

./: README.md  build.gradle  gradle.properties  settings.gradle
SerialPortlib/: build.gradle
SerialPortlib/src/main/: AndroidManifest.xml
SerialPortlib/src/main/cpp/: CMakeLists.txt
SerialPortlib/src/main/cpp/include/: SerialPort.h  SerialPortLog.h
SerialPortlib/src/main/cpp/src/: SerialPort.cpp  SerialPortJNI.cpp
SerialPortlib/src/main/java/com/anniljing/serialportlib/: SerialPortJNI.java
UnixLearn/: build.gradle
UnixLearn/src/main/: AndroidManifest.xml
UnixLearn/src/main/cpp/: CMakeLists.txt  FileIOOperator.cpp  FileIOOperator.h  FileOperator.cpp  FileOperator.h  FileOperatorJNI.cpp  IOOperatorJNI.cpp  StreamIOOperator.cpp  StreamIOOperator.h  ThreadOperator.cpp  ThreadOperator.h  ThreadOperatorJNI.cpp  UnixLog.h
UnixLearn/src/main/java/com/anniljing/unixlearn/: FileCallBack.java  (+2 more)
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  basicType.cpp  jniCallJavaClassField.cpp  jniDynamicLoadNative.cpp  jni_dynamic_load.cpp  native-lib.cpp
app/src/main/cpp/ArrayHandle/: ArrayHandle.cpp
app/src/main/cpp/ClassFieldOperator/: ClassFieldOperator.cpp  ClassStaticFieldOperator.cpp
app/src/main/cpp/ClassMethodOperator/: ClassMethodOPerator.cpp
app/src/main/cpp/ClassStaticFieldOperator/: ClassStaticFieldOperator.cpp
app/src/main/cpp/HandleException/: HandleException.cpp
app/src/main/cpp/JavaClassOperator/: JavaClassOperator.cpp
app/src/main/cpp/StringHandle/: StringHandle.cpp
app/src/main/cpp/VersionInformation/: VersionInformation.cpp
app/src/main/cpp/base/: AndroidLog.cpp  AndroidLog.h  jvm.cpp  jvm.h
app/src/main/cpp/thread/: jni_product_and_consumer_thread.cpp  jni_thread.cpp
app/src/main/res/layout/: activity_file_operator.xml  activity_main.xml  activity_socket_main.xml  activity_socket_server.xml
base/: build.gradle
base/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
(+30 files in other folders)
